--- a/src/assets/styles/cartPage.css
+++ b/src/assets/styles/cartPage.css
@@ -2,17 +2,16 @@
 .cart__container{
     flex-direction: column;
     gap: 3;
-
 }
 
 .cart-item{
     flex-direction: row;
 }
 .cart-item__image{
-    width: 30%;
+    width: 40%;
 }
 .cart-item__image > img{
-    width: 85px;
+    width: 100px;
 }
 
 .cart-item__details{
@@ -29,23 +28,30 @@
     margin: 50px;
 
 }
+.cart-item__price{
+    flex-direction: column;
+}
+.discount-text{
+    background: red;
+    padding: 1px 4px;
+    color: white;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.breadcrumb-item{
+    text-decoration: none  !important;
+}
+
 
 
 
 @media (min-width: 992px) {
-    .cart__container{
-        flex-direction: row;
-    }
-    .cart__items{
-        width: 70%;
+    
+    .cart-item__image{
+        width: 25%;
     }
 
-    .cart-item__image > img{
-        width: 100px;
-    }
-    .cart__purchase-summary{
-        width: 30%;
-    }
     .cart-item__details{
         flex-direction: row;
         justify-content: space-between;
@@ -55,4 +61,67 @@
         width: 200px;
     }
 
+}
+
+/* Purchase summary */
+
+.checkout-container{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1rem;
+}
+
+.item-container{
+    display: flex;
+    margin-bottom: .5rem;
+    padding: .5rem;
+    align-items: center;
+}
+.image-container{
+    position: relative;
+    margin-right: 1.5rem;
+}
+.item-quantity{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background: gray;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    width: 25px;
+    height: 25px;
+    right: -15px;
+    top: -10px;
+}
+.item-title{
+    flex-grow: 1;
+}
+.item-price{
+    align-items: flex-end;
+    min-width: 80px;
+    text-align: end;
+}
+.item-container__wrapper{
+    max-width: 600px;
+    width: 100%;
+   
+}
+
+@media (min-width: 992px) {
+    
+    .checkout-container{
+        flex-direction: row;
+    }
+    .item-container__wrapper{
+        width: 50%;
+    }
+    .item-container__summary{
+        border-left: 1px solid #c4cbd1;
+        padding-left: 1rem;
+    }
+    
 }
