--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-    background: whitesmoke;
+    background: #F6F9FC;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
+    color: black;
 }
