--- a/src/assets/styles/itemDetail.css
+++ b/src/assets/styles/itemDetail.css
@@ -1,41 +1,90 @@
-.item__container{
-    background: white;
-    padding: 1rem;
-    margin-top: 1rem;
-}
-.item-details__container{
+.product-container{
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
-.item-image__description{
-    padding: 1rem;
+
+.product-image-container{
+    text-align: center;
+    background: white;
 }
-.item-name_title{
+
+.product-image-container .image-displayed{
+    width: 80%;
+}
+
+.product-image-container .images-list-container .image-list{
+  
+    border: 1px solid whitesmoke;
+    cursor: pointer;
+}
+
+.product-image-container .images-list-container .image-list:hover{
+    transform: scale(1.1);
+}
+
+.product-image-container .images-list-container .image-selected{
+    border-bottom: 3px solid var(--mi-color);
+}
+
+.product-description-container,
+.product-details-container{
+    padding: 2rem;
+    background: white;
+}
+
+.product-details-container .price-container{
+    display: flex;
+    gap: .5rem;
+    align-items:baseline;
+}
+.product-details-container .product-title,
+.product-details-container .price-container .discounted-price,
+.product-description-container .description-title{
+    color: var(--mi-color);
+    font-weight: bolder;
+}
+.product-details-container .price-container .total-price{
+    color: #8C94A7;
+    text-decoration: line-through;
+}
+
+.product-details-container .price-container .discount{
+    color: white;
     font-weight: bold;
+    background: red;
 }
-.image-selected{
-    border-bottom: 2px solid rgb(63, 146, 223) !important; 
+.product-details-container .counter-container{
+    display: flex;
+    gap: 1rem
+}
+
+.counter{
+    gap: 1rem;
+    border-radius: .8rem;
+    background: whitesmoke;
+    padding: .5rem;
+}
+.counter  button {
+    background: whitesmoke;
+    font-weight: bold;
+    color: gray;
+}
+.counter button:hover {
+    color: var(--mi-color);
 }
 
 
-@media (min-width: 576px) {
+
+@media (min-width: 768px) {
     
-    .item-details__container{
+    .product-container{
         flex-direction: row;
     }
-    .item-image__container,
-    .item-image__description{
-        width: 50%;
+    .product-image-container .image-displayed{
+        width: 60%;
     }
-    .item-image__description{
-        border-left: 1px solid #C7C8C9;
-        margin-left: 5px;
-    }
+    
+   
 }
 
-@media (min-width: 992px) {
-    .item__container{
-        margin: 1rem 5rem;
-        padding: 2rem;
-    }
-}
