--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,12 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+* {
+    box-sizing: border-box;
+    margin:0; padding:0;
+    outline: none; border:none;
+    text-decoration: none;
+    transition: all .2s linear;
+    /* text-transform: capitalize; */
+    font-size: 14px;
+}
+
+:root {
+    --mi-color: #0bc1a9;
+}
+
+html{
+    overflow-x: hidden;
+}
+  
 
 body {
     background: #F6F9FC;
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
     color: black;
 }
+
+.container{
+    max-width: 1200px;
+    margin:0 auto;
+    padding: 1rem;
+    /* border: 1px solid; */
+ }
+
+ .bt{
+    border-radius: .5rem;
+    padding: .5rem .5rem;
+    outline: none;
+    font-weight: bold;
+ }
+
+ .main-btn {
+    background: var(--mi-color);
+    color: white;
+    font-weight: bold;
+ }
+
+ .secundary-btn {
+    background: gray;
+    color: white;
+ }
+ 
